# mas-hedge-fund

./: .env.example  .gitignore  LSTM_BACKTESTING_README.md  LSTM_RL_IMPLEMENTATION_SUMMARY.md  README.md  analyze_company_news.py  check_cache_corruption.py  clear_prices_cache.py  debug_multiindex.py  debug_portfolio.py  debug_price_data.py  debug_price_issue.py  debug_specific_day.py  debug_tickers.py  generate_lstm_returns.py  investigate_extreme_returns.py  investigate_fd_growth.py  plot_lstm_returns.py  prefetch_bond_etfs_only.py  prefetch_company_news.py  prefetch_financial_metrics.py  prefetch_insider_trades.py  prefetch_market_cap.py  prefetch_prices.py  prefetch_sp500_membership.py  pyproject.toml  remove_info_from_cache.py  run_lstm_backtest.py  test_api_keys.py  test_backtester.py  test_cache_safety.py  test_ipo_filtering.py  test_lstm_integration.py  test_ticker_lstm.py  train_ticker_lstm.py  train_walkforward_models.py
benchmarking/: analyze_performance.py  analyze_performance_lstm_aligned.py  create_plots.py  download_benchmarks.py
benchmarking/data/: 60_40_portfolio_returns.csv  agg_returns.csv  daily_risk_free_rate.csv  fama_french_3factor.tex  fama_french_3factor_lstm_aligned.tex  fama_french_5factor.tex  fama_french_5factor_lstm_aligned.tex  ff_3factor_daily.csv  ff_5factor_daily.csv  hdg_returns.csv  lstm_walkforward_returns_20250805_142149.csv  lstm_walkforward_returns_20250805_144932.csv  lstm_walkforward_returns_20250806_094230.csv  lstm_walkforward_returns_20250806_095043.csv  (+20 more)
cache/: nyse_calendar.pkl
src/: backtester.py  main.py
(+978 files in other folders)
