[tool.poetry]
name = "mas-hedge-fund"
version = "0.1.0"
description = "An AI-powered hedge fund that uses multiple agents to make trading decisions"
authors = ["Your Name <your.email@example.com>"]
readme = "README.md"
packages = [
    { include = "src", from = "." }
]
[tool.poetry.dependencies]
python = "^3.9"
langchain = "^0.3.19"
langchain-anthropic = "0.3.5"
langchain-groq = "0.2.3"
langchain-openai = "0.3"
langgraph = "0.2.56"
pandas = "^2.1.0"
numpy = "^1.24.0"
python-dotenv = "1.0.0"
matplotlib = "^3.9.2"
tabulate = "^0.9.0"
colorama = "^0.4.6"
questionary = "^2.1.0"
rich = "^13.9.4"
langchain-community = "^0.3.18"
langchain-core = "^0.3.38"
langchain-ollama = "^0.2.3"
yfinance = "^0.2.59"
diskcache = "^5.6.3"
pandas-market-calendars = "^4.6.1"
hurst = "^0.0.5"
secedgar = "^0.6.0"
lxml = "^5.4.0"
fredapi = "^0.5.2"
arch = "^7.2.0"
wrds = "^3.3.0"
yahoo-fin = "^0.8.9.1"
requests-html = "^0.10.0"
scikit-learn = "^1.3.0"
scipy = "^1.11.0"
stargazer = "^0.0.7"
statsmodels = "^0.14.5"
torch = "^2.0.0"
tensorboard = "^2.14.0"
tqdm = "^4.66.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
black = "^23.7.0"
isort = "^5.12.0"
flake8 = "^6.1.0"
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 420
target-version = ['py39']
include = '\.pyi?$'